// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/versions/VersionsSidebar render should show an inline error if the prop is provided 1`] = `
<SidebarContent
  className="bcs-Versions"
  data-resin-component="preview"
  data-resin-feature="versions"
  elementId=""
  sidebarView=""
  title={
    <React.Fragment>
      <BackButton
        data-resin-target="back"
        to="/activity"
      />
      <FormattedMessage
        defaultMessage="Version History"
        id="be.sidebarVersions.title"
      />
    </React.Fragment>
  }
>
  <LoadingIndicatorWrapper
    className="bcs-Versions-content"
    crawlerPosition="top"
  >
    <InlineError
      title={
        <FormattedMessage
          defaultMessage="Server Error"
          id="be.sidebarVersions.serverError"
        />
      }
    >
      <FormattedMessage
        defaultMessage="File versions could not be retrieved."
        id="be.sidebarVersions.fetchError"
      />
    </InlineError>
    <div
      className="bcs-Versions-empty"
    >
      <FormattedMessage
        defaultMessage="No prior versions are available for this file."
        id="be.sidebarVersions.empty"
      />
    </div>
  </LoadingIndicatorWrapper>
</SidebarContent>
`;

exports[`elements/content-sidebar/versions/VersionsSidebar render should show the versions list if no error prop is provided 1`] = `
<SidebarContent
  className="bcs-Versions"
  data-resin-component="preview"
  data-resin-feature="versions"
  elementId=""
  sidebarView=""
  title={
    <React.Fragment>
      <BackButton
        data-resin-target="back"
        to="/activity"
      />
      <FormattedMessage
        defaultMessage="Version History"
        id="be.sidebarVersions.title"
      />
    </React.Fragment>
  }
>
  <LoadingIndicatorWrapper
    className="bcs-Versions-content"
    crawlerPosition="top"
  >
    <div
      className="bcs-Versions-menu"
    >
      <Component
        versions={
          Array [
            Object {
              "id": "12345",
            },
          ]
        }
      />
    </div>
  </LoadingIndicatorWrapper>
</SidebarContent>
`;
